--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.authentication.AuthenticationActivity">
+        <activity android:name=".presentation.dial.DialActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
