--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,11 +62,12 @@ dependencies {
     compile presentationDependencies.appcompat
     compile presentationDependencies.design
     compile presentationDependencies.cardview
+    compile presentationDependencies.firebaseCrash
+    compile presentationDependencies.servicesGcm
     compile 'com.klinkerapps:android-chips:1.0.0'
     compile 'com.stormpath.sdk:stormpath-sdk-android:2.0'
     compile 'com.twilio:voice-android:2.0.0-beta4'
     compile 'com.twilio:client-android:1.2.19'
-    compile "com.google.android.gms:play-services-gcm:10.2.0"
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.koushikdutta.ion:ion:2.1.8'
     compile project(':domain')
