--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <!-- needed to enable/disable the speakerphone -->
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <!-- needed to receive audio from microphone during a call -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -32,8 +32,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.authentication.AuthenticationActivity"
-            android:windowSoftInputMode="stateAlwaysHidden">
+        <activity android:name=".presentation.authentication.AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,10 +52,16 @@
         <activity android:name=".presentation.authentication.login.LoginActivity" />
         <activity android:name=".presentation.authentication.login.forgot.ForgotPasswordActivity" />
 
-        <activity android:name=".presentation.call.CallActivity"/>
-        <activity android:name=".presentation.dial.DialActivity"/>
+        <activity android:name=".presentation.phone.PhoneActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name=".presentation.phone.dial.DialActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
-        <service android:name="com.twilio.client.TwilioClientService" android:exported="false" android:stopWithTask="true"/>
+        <service
+            android:name="com.twilio.client.TwilioClientService"
+            android:exported="false"
+            android:stopWithTask="true" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
