--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity android:name=".presentation.message.list.MessageListActivity" />
         <activity android:name=".presentation.message.compose.ComposeActivity" />
 
+        <activity android:name=".presentation.voice.VoiceActivity" />
+        <activity android:name=".presentation.voice.TestVoiceActivity" />
+
         <activity android:name=".presentation.authentication.register.name.RegisterNameActivity" />
         <activity android:name=".presentation.authentication.register.email.RegisterEmailActivity" />
         <activity android:name=".presentation.authentication.register.password.RegisterPasswordActivity" />
