add screen buy number

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".presentation.dashboard.DashboardActivity" />
 
         <activity android:name=".presentation.numbers.NumbersActivity" />
+        <activity android:name=".presentation.buy.BuyNumberActivity" />
 
         <activity android:name=".presentation.phone.PhoneActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
