load api incoming phone numbers, api available phone numbers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,9 +58,9 @@
 
         <activity android:name=".presentation.dashboard.DashboardActivity" />
 
-        <activity android:name=".presentation.numbers.NumbersActivity" />
-        <activity android:name=".presentation.buy.BuyNumberActivity" />
-        <activity android:name=".presentation.buy.result.ResultSearchNumberActivity" />
+        <activity android:name=".presentation.numbers.IncomingPhoneNumbersActivity" />
+        <activity android:name=".presentation.buy.SearchPhoneNumberActivity" />
+        <activity android:name=".presentation.buy.result.AvailablePhoneNumberActivity" />
 
         <activity android:name=".presentation.phone.PhoneActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
