--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
 
         <activity android:name=".presentation.phone.CallActivity" />
+        <activity android:name=".presentation.phone.callingscreen.CallingScreenActivity" />
 
         <activity
             android:name=".presentation.phone.dial.DialActivity"
