--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
 
         <activity android:name=".presentation.phone.CallActivity" />
+        <activity android:name=".presentation.phone.incall.InCallActivity" />
         <activity android:name=".presentation.phone.callingscreen.CallingScreenActivity" />
 
         <activity
@@ -108,7 +109,7 @@
 
         <service
             android:name=".gcm.GCMRegistrationService"
-            android:exported="false"></service>
+            android:exported="false"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
