--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     compile 'com.twilio:client-android:1.2.19'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.koushikdutta.ion:ion:2.1.8'
+    compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
     compile project(':domain')
 }
 apply plugin: 'com.google.gms.google-services'
