--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
+
+    lintOptions {
+        abortOnError false
+    }
+
     def globalConfiguration = rootProject.extensions.getByName("ext")
 
     compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
