--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     compile dataDependencies.appcompat
 
     compile 'com.googlecode.libphonenumber:libphonenumber:6.2'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
 }
