--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,10 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.1.8'
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
     compile project(':domain')
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
