--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,16 +65,14 @@
         <activity android:name=".presentation.buy.SearchPhoneNumberActivity" />
         <activity android:name=".presentation.buy.result.AvailablePhoneNumberActivity" />
 
-        <activity
-            android:name=".presentation.phone.PhoneActivity"
-            android:windowSoftInputMode="stateAlwaysHidden" />
-
-        <activity android:name=".presentation.phone.CallActivity" />
+        <!--<activity android:name=".presentation.phone.CallActivity" />-->
         <activity android:name=".presentation.setting.SettingActivity" />
         <activity android:name=".presentation.license.LicenseActivity" />
         <activity android:name=".presentation.usage.UsageActivity" />
+        <activity android:name=".presentation.phone.PhoneActivity" />
         <activity android:name=".presentation.phone.incall.InCallActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
+
         <activity android:name=".presentation.phone.callingscreen.CallingScreenActivity" />
 
         <activity
@@ -117,6 +115,27 @@
         <service
             android:name=".gcm.GCMRegistrationService"
             android:exported="false"/>
+
+        <service android:name=".presentation.phone.service.PhoneService">
+            <intent-filter>
+                <action android:name="com.seesaa.newsaudiocast.action.ACTION_PLAY" />
+                <action android:name="com.seesaa.newsaudiocast.action.ACTION_PAUSE" />
+            </intent-filter>
+        </service>
+
+        <receiver android:name=".presentation.phone.service.BootCompleteReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".presentation.phone.service.PhoneIntervalReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.ethan.morephone.action.WAKE_UP"/>
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="com.google.android.gms.version"
