--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.1.8'
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.ozodrukh:CircularReveal:1.0.5'
     compile project(':domain')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
