change menu, add payment screen menu item, add purchase screen, send message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".presentation.message.conversation.ConversationsActivity" />
         <activity android:name=".presentation.message.list.MessageListActivity" />
         <activity android:name=".presentation.message.compose.ComposeActivity" />
+        <activity android:name=".presentation.buy.payment.purchase.PurchaseActivity" />
 
         <activity android:name=".presentation.voice.VoiceActivity" />
         <activity android:name=".presentation.voice.TestVoiceActivity" />
