--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
         <activity android:name=".presentation.buy.payment.card.CardActivity" />
         <activity android:name=".presentation.buy.payment.PaymentActivity" />
 
+        <activity android:name=".presentation.buy.payment.fund.AddFundActivity" />
+
         <!--<activity android:name=".presentation.phone.CallActivity" />-->
         <activity android:name=".presentation.setting.SettingActivity" />
         <activity android:name=".presentation.license.LicenseActivity" />
