--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
         exclude group: 'io.card'
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
+    compile 'com.stripe:stripe-android:4.0.2'
     compile 'com.klinkerapps:android-chips:1.0.0'
     compile 'com.stormpath.sdk:stormpath-sdk-android:2.0'
     compile 'com.twilio:voice-android:2.0.0-beta4'
