--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.github.ozodrukh:CircularReveal:1.0.5'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.android.support:multidex:1.0.1'
     compile project(':domain')
 
