--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     compile dataDependencies.converterGson
     compile dataDependencies.retrofitLogging
     compile dataDependencies.appcompat
+    compile 'com.auth0.android:auth0:1.8.0'
 
     compile 'com.googlecode.libphonenumber:libphonenumber:6.2'
-    compile 'com.stormpath.sdk:stormpath-sdk-android:2.0'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
