--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,13 +40,18 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".presentation.authentication.AuthenticationActivity"
-            android:launchMode="singleTask">
+        <activity android:name=".presentation.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".presentation.authentication.AuthenticationActivity"
+            android:launchMode="singleTask">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -62,7 +67,9 @@
 
         </activity>
 
+
         <activity android:name=".presentation.main.MainActivity" />
+
         <activity android:name=".presentation.message.conversation.ConversationsActivity" />
         <activity android:name=".presentation.message.list.MessageListActivity" />
         <activity android:name=".presentation.message.compose.ComposeActivity" />
