--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".presentation.splash.SplashActivity">
+        <activity android:name=".presentation.authentication.login.google.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
