--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 keystore=../buildsystem/keystore.jks
-keystore_password=ethan2017
-key_alias=morephone
-key_password=ethan2017
+keystore_password=123456
+key_alias=tpms
+key_password=123456
