--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -87,7 +87,9 @@ ext {
             firebaseDatabase    : "com.google.firebase:firebase-database:${firebaseVersion}",
             firebaseCrash       : "com.google.firebase:firebase-crash:${firebaseVersion}",
             firebaseAds         : "com.google.firebase:firebase-ads:${firebaseVersion}",
+            firebaseMessage     : "com.google.firebase:firebase-messaging:${firebaseVersion}",
             firebaseConfig      : "com.google.firebase:firebase-config:${firebaseVersion}",
+            servicesBase        : "compile 'com.google.android.gms:play-services-base:${servicesVersion}",
             servicesAuth        : "com.google.android.gms:play-services-auth:${servicesVersion}",
             servicesWallet      : "com.google.android.gms:play-services-wallet:${servicesVersion}",
             servicesGcm         : "com.google.android.gms:play-services-gcm:${servicesVersion}",
