--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".presentation.record.TestVoiceActivity">
+        <activity android:name=".presentation.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -155,7 +155,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_launcher" />
+            android:resource="@mipmap/ic_launcher" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/blue_color" />
@@ -180,12 +180,8 @@
         </service>
         <!-- [END instanceId_listener] -->
 
-
         <service android:name=".presentation.phone.service.PhoneService">
-            <intent-filter>
-                <action android:name="com.seesaa.newsaudiocast.action.ACTION_PLAY" />
-                <action android:name="com.seesaa.newsaudiocast.action.ACTION_PAUSE" />
-            </intent-filter>
+
         </service>
 
         <receiver android:name=".presentation.phone.service.BootCompleteReceiver">
