--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
     compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
     buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
 
+    useLibrary  'org.apache.http.legacy'
+
     signingConfigs {
         debug {
             storeFile file("${keystore}")
@@ -44,6 +46,19 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
     }
 
 // Specify that we want to split up the APK based on ABI
@@ -89,6 +104,10 @@ dependencies {
     compile 'com.github.ozodrukh:CircularReveal:1.0.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'io.jsonwebtoken:jjwt:0.7.0'
+    compile 'com.google.guava:guava:22.0-android'
+    compile 'org.apache.commons:commons-lang3:3.4'
+
     compile project(':domain')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
