--- a/data/build.gradle
+++ b/data/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile dataDependencies.retrofitLogging
     compile dataDependencies.appcompat
     compile 'com.auth0.android:auth0:1.8.0'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+
 
     compile 'com.googlecode.libphonenumber:libphonenumber:6.2'
 
