--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".presentation.credit.CreditActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".presentation.phone.dial.DialActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
