--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile 'io.jsonwebtoken:jjwt:0.7.0'
     compile 'com.google.guava:guava:22.0-android'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'pub.devrel:easypermissions:0.4.3'
 
     compile project(':domain')
 
