--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,21 +62,21 @@ android {
     }
 
 // Specify that we want to split up the APK based on ABI
-    splits {
-        abi {
-            // Enable ABI split
-            enable true
-
-            // Clear list of ABIs
-            reset()
-
-            // Specify each architecture currently supported by the Video SDK
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
-
-            // Specify that we do not want an additional universal SDK
-            universalApk false
-        }
-    }
+//    splits {
+//        abi {
+//            // Enable ABI split
+//            enable true
+//
+//            // Clear list of ABIs
+//            reset()
+//
+//            // Specify each architecture currently supported by the Video SDK
+//            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+//
+//            // Specify that we do not want an additional universal SDK
+//            universalApk false
+//        }
+//    }
 }
 
 dependencies {
@@ -93,7 +93,6 @@ dependencies {
 
     compile 'com.google.code.findbugs:jsr305:2.0.3'
     compile 'com.klinkerapps:android-chips:1.0.0'
-    compile 'com.twilio:voice-android:2.0.0-beta14'
     compile 'com.twilio:client-android:1.2.20'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
